// Vitest Snapshot v1

exports[`header slot and body slot 1`] = `
"<div class=\\"table\\">
  <table class=\\"table__table\\">
    <thead>
      <tr>
        <th class=\\"table__header-cell\\"><span class=\\"table__header-cell__value\\">NAME</span>
          <!---->
        </th>
        <th class=\\"table__header-cell\\"><span class=\\"table__header-cell__value\\">Age</span><span class=\\"table__header-cell_sort\\"></span></th>
      </tr>
    </thead>
    <tbody>
      <tr class=\\"table__body-row\\">
        <td class=\\"table__body-cell\\"><span>Bob</span></td>
        <td class=\\"table__body-cell\\"><span>Bob(27)</span></td>
      </tr>
      <tr class=\\"table__body-row\\">
        <td class=\\"table__body-cell\\"><span>Tom</span></td>
        <td class=\\"table__body-cell\\"><span>Tom(20)</span></td>
      </tr>
      <tr class=\\"table__body-row\\">
        <td class=\\"table__body-cell\\"><span>Alice</span></td>
        <td class=\\"table__body-cell\\"><span>Alice(23)</span></td>
      </tr>
    </tbody>
  </table>
  <!---->
</div>"
`;

exports[`mount component without props 1`] = `
"<div class=\\"table\\">
  <table class=\\"table__table\\">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
  <!---->
</div>"
`;

exports[`props with columns and data 1`] = `
"<div class=\\"table\\">
  <table class=\\"table__table\\">
    <thead>
      <tr>
        <th class=\\"table__header-cell\\"><span class=\\"table__header-cell__value\\">Name</span>
          <!---->
        </th>
        <th class=\\"table__header-cell\\"><span class=\\"table__header-cell__value\\">Age</span><span class=\\"table__header-cell_sort\\"></span></th>
      </tr>
    </thead>
    <tbody>
      <tr class=\\"table__body-row\\">
        <td class=\\"table__body-cell\\"><span>Bob</span></td>
        <td class=\\"table__body-cell\\"><span>27</span></td>
      </tr>
      <tr class=\\"table__body-row\\">
        <td class=\\"table__body-cell\\"><span>Tom</span></td>
        <td class=\\"table__body-cell\\"><span>20</span></td>
      </tr>
      <tr class=\\"table__body-row\\">
        <td class=\\"table__body-cell\\"><span>Alice</span></td>
        <td class=\\"table__body-cell\\"><span>23</span></td>
      </tr>
    </tbody>
  </table>
  <!---->
</div>"
`;
